http/tests/ssl/applepay/ApplePayInstallmentConfiguration.https.html fails in public SDK builds https://bugs.webkit.org/show_bug.cgi?id=212000 <rdar://problem/63323082>

Reviewed by Youenn Fablet.

Source/JavaScriptCore:

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

* Configurations/FeatureDefines.xcconfig:
* bindings/js/WebCoreBuiltinNames.h:

Source/WebCore/PAL:

* Configurations/FeatureDefines.xcconfig:
* pal/spi/cocoa/PassKitSPI.h:

Source/WebKit:

* Configurations/FeatureDefines.xcconfig:
* Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.h:
* Shared/WebCoreArgumentCoders.h:

Source/WebKitLegacy/mac:

* Configurations/FeatureDefines.xcconfig:

Source/WTF:

* wtf/PlatformEnableCocoa.h:
* wtf/PlatformHave.h:

Tools:

* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/224935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261845 268f45cc-cd09-0410-ab3c-d52691b4dbfc