Source/WebKit/Shared/WebCoreArgumentCoders.h
@@ -107,6 +107,7 @@ class LinearTimingFunction;
 class NativeImageHandle;
 class Notification;
 class PasteboardCustomData;
+class PaymentInstallmentConfiguration;
 class ProtectionSpace;
 class Region;
 class ResourceError;
@@ -877,6 +878,13 @@ template<> struct ArgumentCoder<Ref<WebCore::ImageData>> {
     static void encode(Encoder&, const Ref<WebCore::ImageData>&);
     static Optional<Ref<WebCore::ImageData>> decode(Decoder&);
 };
+
+#if HAVE(PASSKIT_INSTALLMENTS)
+template<> struct ArgumentCoder<WebCore::PaymentInstallmentConfiguration> {
+    static void encode(Encoder&, const WebCore::PaymentInstallmentConfiguration&);
+    static Optional<WebCore::PaymentInstallmentConfiguration> decode(Decoder&);
+};
+#endif
 
 } // namespace IPC
 
